--- a/todo-api/src/main/resources/application.properties
+++ b/todo-api/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.mode=always
+#spring.jpa.defer-datasource-initialization=true
