Modify config for CORS and session

--- a/todo-api/src/main/resources/application.properties
+++ b/todo-api/src/main/resources/application.properties
@@ -10,3 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #spring.sql.init.mode=always
 #spring.jpa.defer-datasource-initialization=true
+
+# Enables secure session cookies and cross-origin use
+server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.secure=true
